--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     
     <h1>Hey Guys!</h1> 
     <h2> this is h2 tag </h2>
+    <h2> this is h2 tag </h2>
+    <h2> this is h2 tag </h2>
     
+
 </body>
 </html>
